@@ -1,0 +1,4 @@
+series_images.mark_as_hidden = \
+UPDATE series_images \
+   SET hidden = TRUE \
+ WHERE series_id = :series_id AND image_id = :image_id
