@@ -1,5 +1,6 @@
 0.x (upcoming release)
-- (feature)      users can add a comment to a series
+- (feature)        users can add a comment to a series
+- (feature)        admin can hide an image
 - (infrastructure) migrate to JUnit 5
 
 0.4.5
